--- a/_interface.sass
+++ b/_interface.sass
@@ -1,8 +1,10 @@
 button
 	cursor: pointer
+	border-radius: 10px
 .form	// Форма
 	text-align: center
 	background: #fff
+
 	&-main
 		padding: 35px 39px 39px 39px
 	&-title
@@ -124,7 +126,7 @@ button
 				background-color: $active-color
 				color: $text-color-light
 				& .slider-block__button_img
-					background: url(../img/shopping-cart-hover.png) 0 0 no-repeat
+					background: url(../img/shopping-cart-hover.svg) 0 0 no-repeat
 					transition: background 1.5s
 					transition: color 1.5s
 					transition: background-color 1.5s
@@ -132,10 +134,10 @@ button
 				display: inline-block
 				vertical-align: middle
 				margin-right: 19px
-				background: url(../img/shopping-cart.png) 0 0 no-repeat
+				background: url(../img/shopping-cart.svg) 0 0 no-repeat
 				background-size: cover
 				width: 17px
-				height: 16px
+				height: 17px
 				transition: background 1.5s
 				transition: color 1.5s
 				transition: background-color 1.5s
