--- a/_manual.sass
+++ b/_manual.sass
@@ -3,7 +3,7 @@
 	color: $text-color-light
 	font-size: 16px
 	&-bg
-		background: #000 url(../img/manual/manual-bg.png) center no-repeat
+		background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8)), url(../img/manual/manual-bg.png) center no-repeat
 		background-size: cover
 	&-arrow
 		position: absolute
