--- a/style.sass
+++ b/style.sass
@@ -5,6 +5,7 @@ h1, h2
 	margin-top: 0
 
 input, button, textarea, .slick-slide, .slider-block__button
+	border-radius: 10px
 	&:focus
 		outline: none
 
@@ -25,24 +26,22 @@ input, button, textarea, .slick-slide, .slider-block__button
 @import 'footer'
 @import 'media'
 
-
-
-@font-face 
+@font-face
 	font-family: 'MyriadPro-Regular'
 	src: url(../fonts/MyriadPro-Regular.otf)
 	font-style: normal
 
-@font-face 
+@font-face
 	font-family: 'ProximaNova-Bold'
 	src: url(../fonts/ProximaNova-Bold.ttf)
 	font-style: normal
 
-@font-face 
+@font-face
 	font-family: 'ProximaNova-Light'
 	src: url(../fonts/ProximaNova-Light.ttf)
 	font-style: normal
 
-@font-face 
+@font-face
 	font-family: 'ProximaNova-Regular'
 	src: url(../fonts/ProximaNova-Regular.ttf)
 	font-style: normal
