--- a/_feedback.sass
+++ b/_feedback.sass
@@ -11,8 +11,9 @@
 		letter-spacing: 0.5px
 		font-size: 22px
 		&__click
-			color: $header-color
+			color: $footer-color
 			&:hover
 				color: $text-color-dark
 .show-order
 	text-decoration: underline
+	display: block
