--- a/_footer.sass
+++ b/_footer.sass
@@ -37,7 +37,8 @@
 	&-contacts
 		display: flex
 		justify-content: flex-end
-		flex-wrap: wrap
+		flex-direction: column
+		text-align: right
 		&__phone
 			margin-bottom: 12px
 			a
