--- a/_header.sass
+++ b/_header.sass
@@ -16,6 +16,11 @@
 		display: flex
 		align-items: center
 		height: 31px
+		a
+			cursor: default
+			color: $text-color-light
+			&:hover
+				color: $header-color
 		&__icon
 			margin-right: 19px
 			margin-bottom: 3px
