--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,15 @@ button {
   height: 31px;
 }
 
+.header-adress a {
+  cursor: default;
+  color: #fff;
+}
+
+.header-adress a:hover {
+  color: #f5f900;
+}
+
 .header-adress__icon {
   margin-right: 19px;
   margin-bottom: 3px;
@@ -777,11 +786,11 @@ button {
 .contacts {
   font-family: 'ProximaNova-Light';
   font-size: 16px;
-  padding: 60px 0 55px 0;
 }
 
 .contacts-bg {
   background-color: #f9f9f9;
+  padding: 60px 0 0 0;
 }
 
 .contacts-block {
@@ -801,13 +810,17 @@ button {
   height: 30px;
 }
 
+.contacts-block__text:hover {
+  color: #2d6ca0;
+}
+
 .contacts-block__text a {
   cursor: default;
   color: #000;
 }
 
 .contacts-block__text a:hover {
-  color: #f5f900;
+  color: #2d6ca0;
 }
 
 .feedback {
@@ -826,7 +839,7 @@ button {
 }
 
 .feedback-text__click {
-  color: #f5f900;
+  color: #2d6ca0;
 }
 
 .feedback-text__click:hover {
@@ -835,6 +848,7 @@ button {
 
 .show-order {
   text-decoration: underline;
+  display: block;
 }
 
 .footer-bg {
@@ -890,7 +904,8 @@ button {
 .footer-contacts {
   display: flex;
   justify-content: flex-end;
-  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: right;
 }
 
 .footer-contacts__phone {
@@ -1043,7 +1058,7 @@ button {
     height: 100%;
     width: 100%;
     z-index: 1;
-    background: #000 url(../img/main/bg-main.png) center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/main/bg-main.png) center no-repeat;
     background-size: cover;
     left: -100%;
     transition: all 0.5s;
@@ -1098,7 +1113,7 @@ button {
     margin-bottom: 5px;
   }
   .header-adress_email {
-    margin-left: 9px;
+    margin-left: 0;
     margin-bottom: 0;
   }
   .header-adress_email a:hover {
@@ -1299,6 +1314,9 @@ button {
 @media (max-width: 767px) {
   .header {
     margin-bottom: 30px;
+  }
+  .header-logo img {
+    width: 100px;
   }
   .header-adress {
     margin-left: 5px;
