--- a/_media.sass
+++ b/_media.sass
@@ -192,7 +192,7 @@
 			&-subtitle
 				margin-bottom: 40px
 				font-size: 20px
-				text-align: center
+				text-align: left
 			&-block
 				margin-left: 13px
 				margin-bottom: 40px
