--- a/css/style.css
+++ b/css/style.css
@@ -1140,7 +1140,7 @@ button {
   .main .advantages-subtitle {
     margin-bottom: 40px;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
   }
   .main .advantages-block {
     margin-left: 13px;
