--- a/_main.sass
+++ b/_main.sass
@@ -16,7 +16,14 @@
 		margin-bottom: 55px
 		font-size: 20px
 		color: #fffafa
-
+	&-subtitle ul
+		list-style: none
+		list-style-image: url('/img/main/list.png')
+	&-subtitle ul::before
+		content: ''
+		height: 20px
+		width: 20px
+		background: url('')
 	&-block
 		display: flex
 		font-size: 15px
