--- a/css/style.css
+++ b/css/style.css
@@ -586,9 +586,10 @@ button {
   color: #fffafa;
 }
 
-.advantages-subtitle ul {
+.advantages-subtitle ul li {
   list-style: none;
   list-style-image: url("/img/main/list.png");
+  list-style-position: inside;
 }
 
 .advantages-block {
