--- a/_main.sass
+++ b/_main.sass
@@ -16,9 +16,10 @@
 		margin-bottom: 55px
 		font-size: 20px
 		color: #fffafa
-	&-subtitle ul
+	&-subtitle ul li
 		list-style: none
 		list-style-image: url('/img/main/list.png')
+		list-style-position: inside
 
 	&-block
 		display: flex
