--- a/_main.sass
+++ b/_main.sass
@@ -18,7 +18,7 @@
 		color: #fffafa
 	&-subtitle ul li
 		list-style: none
-		list-style-image: url('/img/main/list.png')
+		list-style-image: url('../img/main/list.png')
 		list-style-position: inside
 
 	&-block
