--- a/_feedback.sass
+++ b/_feedback.sass
@@ -13,7 +13,5 @@
 		&__click
 			color: $footer-color
 			&:hover
-				color: $text-color-dark
-.show-order
-	text-decoration: underline
-	display: block
+				color: $active-color
+				text-decoration: underline
