--- a/_interface.sass
+++ b/_interface.sass
@@ -170,3 +170,12 @@ button
 		&:hover
 			cursor: pointer
 			background: transparent url(../img/slider-arrow-right-hover.png) 0 0 no-repeat
+.fixedbut
+	position: fixed
+	bottom: 20px
+	right: 20px
+	display: block
+	background: #416ece
+	border-radius: 10px
+.fixedbut:hover
+	background: #222
