--- a/_footer.sass
+++ b/_footer.sass
@@ -15,7 +15,7 @@
 		display: -o-flex
 		display: flex
 		align-items: center
-		height: 31px
+		min-height: 31px
 		&_email
 			margin-left: 20px
 		&__icon
