--- a/_interface.sass
+++ b/_interface.sass
@@ -175,7 +175,11 @@ button
 	bottom: 20px
 	right: 20px
 	display: block
-	background: #416ece
-	border-radius: 10px
+	border-radius: 50%
+	z-index: 100
+	width: 64px
+	height: 64px
+	background: #ffffff
+
 .fixedbut:hover
-	background: #222
+	background: #95afe7
