--- a/css/style.css
+++ b/css/style.css
@@ -250,10 +250,23 @@ button {
   width: 64px;
   height: 64px;
   background: #ffffff;
+  animation: animate 3s linear infinite;
 }
 
 .fixedbut:hover {
   background: #95afe7;
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
 }
 
 .header-bg {
