--- a/_media.sass
+++ b/_media.sass
@@ -1,5 +1,5 @@
 @media (max-width: 1440px)
-	.materials // Секция Материалы
+	.materials // Секция товары
 		&-img
 			// left: 0
 			transform: translate(278%,-132px)
@@ -9,7 +9,7 @@
 			transform: translate(10%,-100px)
 
 @media (max-width: 1366px)
-	.materials // Секция Материалы
+	.materials // Секция товары
 		&-img
 			// left: 0
 			transform: translate(278%,-112px)
@@ -57,7 +57,7 @@
 	.section-slider	//Секция со слайдером
 		padding: 82px 0
 
-	.materials // Секция Материалы
+	.materials // Секция товары
 		&-img
 			transform: translate(272%,-112px)
 			height: 300px
